--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -24,3 +24,22 @@ dataSources:
         - event: CollectionCreated(indexed address,indexed address,string,string,string,string,string,string,string,string)
           handler: handleCollectionCreated
       file: ./src/erc-721-factory.ts
+templates:
+  - kind: ethereum/contract
+    name: NFTCollection
+    network: base-sepolia
+    source:
+      abi: NFTCollection
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - NFT
+      abis:
+        - name: NFTCollection
+          file: ./abis/NFTCollection.json
+      eventHandlers:
+        - event: Minted(indexed address,indexed uint256,string)
+          handler: handleMinted
+      file: ./src/nft-collection.ts
