--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: ERC721Factory
     network: base-sepolia
     source:
-      address: "0x33cA2Be8548928C08C22D781C6f3E67FE5eBB66d"
+      address: "0x84C3EDD4f57196BA428858622fba2F95ccdBc527"
       abi: ERC721Factory
       startBlock: 21588181
     mapping:
@@ -43,3 +43,15 @@ templates:
         - event: Minted(indexed address,indexed uint256,string)
           handler: handleMinted
       file: ./src/nft-collection.ts
+  - name: NFTMetadata
+    kind: file/arweave
+    mapping:
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      file: ./src/nft-collection.ts
+      handler: handleMetadata
+      entities:
+        - NFTMetadata
+      abis:
+        - name: NFTCollection
+          file: ./abis/NFTCollection.json
