--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -8,7 +8,7 @@ dataSources:
     name: ERC721Factory
     network: base-sepolia
     source:
-      address: "0x84C3EDD4f57196BA428858622fba2F95ccdBc527"
+      address: "0x14FB9F2466889F35292f0d32AF572ba6D5Ed7820"
       abi: ERC721Factory
       startBlock: 21588181
     mapping:
@@ -40,7 +40,7 @@ templates:
         - name: NFTCollection
           file: ./abis/NFTCollection.json
       eventHandlers:
-        - event: Minted(indexed address,indexed uint256,string)
+        - event: Minted(indexed address,indexed uint256,string,string)
           handler: handleMinted
       file: ./src/nft-collection.ts
   - name: NFTMetadata
